syntax = "proto3";
option java_multiple_files= true;

package healthcare;

service HospitalService {
  rpc CheckHospitalExists(HospitalRequest) returns (HospitalResponse);
  rpc GetHospital(HospitalRequest) returns (HospitalResponse2);
}

message HospitalRequest {
  int32 hospital_id = 1;
}

message HospitalResponse {
  bool exists = 1;
}

message HospitalResponse2 {
  bool exists = 1;
  int32 hospitalId = 2;
  string name = 3;
  string address = 4;
  string phone = 5;
  int32 capacity = 6;
}